week4/day5/labs/mesh-app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mesh-api
  namespace: mesh-demo
  labels:
    app: mesh-api
spec:
  selector:
    app: mesh-api
  ports:
    - name: http
      port: 8080
      targetPort: 80
